// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextButton matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 2,
      "WebkitBoxPack": "center",
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 2,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "center",
      "backgroundColor": "rgba(0,0,0,0.12)",
      "borderBottomColor": "rgba(0,0,0,0.00)",
      "borderBottomLeftRadius": "4px",
      "borderBottomRightRadius": "4px",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftColor": "rgba(0,0,0,0.00)",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightColor": "rgba(0,0,0,0.00)",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopColor": "rgba(0,0,0,0.00)",
      "borderTopLeftRadius": "4px",
      "borderTopRightRadius": "4px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "flexBasis": "0%",
      "flexGrow": 2,
      "flexShrink": 1,
      "justifyContent": "center",
      "minWidth": "auto",
      "msFlexNegative": 1,
      "msFlexPack": "center",
      "msFlexPositive": 2,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    aria-disabled={true}
    className="css-view-1dbjc4n"
    disabled={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      Object {
        "borderBottomLeftRadius": "4px",
        "borderBottomRightRadius": "4px",
        "borderTopLeftRadius": "4px",
        "borderTopRightRadius": "4px",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "center",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "center",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "center",
        }
      }
    >
      <div
        className="css-text-76zvg2 css-textOneLine-bfa6kz"
        dir="auto"
        style={
          Object {
            "color": "rgba(0,0,0,0.32)",
            "direction": "ltr",
            "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "letterSpacing": "1px",
            "marginBottom": "9px",
            "marginLeft": "8px",
            "marginRight": "8px",
            "marginTop": "9px",
            "textAlign": "center",
          }
        }
      >
        <span
          className="css-text-76zvg2 css-textHasAncestor-16my406"
          dir="auto"
          style={
            Object {
              "color": "rgba(255,255,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "18px",
              "fontWeight": "bold",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "textAlign": "center",
              "textTransform": "uppercase",
            }
          }
        >
          Next
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PushButton matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxPack": "center",
      "WebkitJustifyContent": "center",
      "backgroundColor": "rgba(85,85,85,1.00)",
      "borderBottomColor": "rgba(0,0,0,0.00)",
      "borderBottomLeftRadius": "4px",
      "borderBottomRightRadius": "4px",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftColor": "rgba(0,0,0,0.00)",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightColor": "rgba(0,0,0,0.00)",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopColor": "rgba(0,0,0,0.00)",
      "borderTopLeftRadius": "4px",
      "borderTopRightRadius": "4px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
      "justifyContent": "center",
      "minWidth": "auto",
      "msFlexPack": "center",
    }
  }
>
  <div
    className="css-cursor-18t94o4 css-view-1dbjc4n"
    data-focusable={true}
    disabled={false}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      Object {
        "borderBottomLeftRadius": "4px",
        "borderBottomRightRadius": "4px",
        "borderTopLeftRadius": "4px",
        "borderTopRightRadius": "4px",
        "cursor": "pointer",
        "msTouchAction": "manipulation",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "position": "relative",
        "touchAction": "manipulation",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "center",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "center",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "center",
        }
      }
    >
      <div
        className="css-text-76zvg2 css-textOneLine-bfa6kz"
        dir="auto"
        style={
          Object {
            "color": "rgba(255,255,255,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "letterSpacing": "1px",
            "marginBottom": "9px",
            "marginLeft": "8px",
            "marginRight": "8px",
            "marginTop": "9px",
            "textAlign": "center",
          }
        }
      >
        <span
          className="css-text-76zvg2 css-textHasAncestor-16my406"
          dir="auto"
          style={
            Object {
              "color": "rgba(255,255,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "18px",
              "fontWeight": "bold",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "textAlign": "center",
              "textTransform": "uppercase",
            }
          }
        >
          Push
        </span>
      </div>
    </div>
  </div>
</div>
`;
